Bug 113408 - FILEOPEN: RTF - Indentation of image not retained
Summary: FILEOPEN: RTF - Indentation of image not retained
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
5.3.6.1 release
Hardware: All All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:6.0.0 target:5.4.4
Keywords: bibisected, bisected, regression
: 113544 (view as bug list)
Depends on:
Blocks: RTF-Paragraph
  Show dependency treegraph
 
Reported: 2017-10-24 15:12 UTC by Yousuf Philips (jay) (retired)
Modified: 2017-11-16 21:53 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
sample (2.40 MB, text/rtf)
2017-10-24 15:12 UTC, Yousuf Philips (jay) (retired)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Yousuf Philips (jay) (retired) 2017-10-24 15:12:35 UTC
Created attachment 137256 [details]
sample

Steps:
1) Open attachment
2) Notice that the image and the line before and after it are no indentation, when they should be 0.50"

So the 'List Paragraph' paragraph is being imported correctly, but 0.00" direct formatting indentation is being applied to these lines. This is a regression introduced in 5.3, as its fine in 5.2.

Version: 6.0.0.0.alpha1+
Build ID: 43d6b11a5c1dda0cc2c1e06c768eece25051a56c
CPU threads: 2; OS: Linux 4.4; UI render: default; VCL: gtk2; 
Locale: en-US (en_US.UTF-8); Calc: group

Version: 5.3.7.1
Build ID: 376eaac300a303c4ad2193fb7f6a7522caf550b9
CPU Threads: 2; OS Version: Linux 4.4; UI Render: default; VCL: gtk2; Layout Engine: new; 
Locale: en-US (en_US.UTF-8); Calc: group

Version: 5.2.7.2
Build ID: 2b7f1e640c46ceb28adf43ee075a6e8b8439ed10
CPU Threads: 2; OS Version: Linux 4.4; UI Render: default; VCL: gtk2; 
Locale: en-US (en_US.UTF-8); Calc: group
Comment 1 raal 2017-10-24 16:35:22 UTC
This seems to have begun at the below commit.
Adding Cc: to Miklos Vajna  ; Could you possibly take a look at this one?
Thanks
 b592ce051a453be0677910db31dc898eb7e4fe3f is the first bad commit
commit b592ce051a453be0677910db31dc898eb7e4fe3f
Author: Jenkins Build User <tdf@pollux.tdf>
Date:   Wed Feb 8 20:32:54 2017 +0100

    source 657c6cc3acec0528209a8584b838cd6de581c437

author	Miklos Vajna <vmiklos@collabora.co.uk>	2016-12-13 07:20:23 (GMT)
committer	Miklos Vajna <vmiklos@collabora.co.uk>	2016-12-13 11:43:36 (GMT)
commit 657c6cc3acec0528209a8584b838cd6de581c437 (patch)
tree 39d57e0b54aca3448afd4ca8da3822217cb143e5
parent 8bd9db90383ee008777903c35c7a5eb2c5352e71 (diff)
tdf#104228 RTF import: fix override of style left/right para margin
Comment 2 Commit Notification 2017-10-31 13:20:13 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=1970a686273c5d4fc1eeb4430283e37085d9f647

tdf#113408 RTF import style dedup: separate paragraph and character handling

It will be available in 6.0.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2017-11-02 16:59:11 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-5-4":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=801a761c4f9a237ae7879e37ca043aa3e587a10c&h=libreoffice-5-4

tdf#113408 RTF import style dedup: separate paragraph and character handling

It will be available in 5.4.4.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Miklos Vajna 2017-11-16 21:53:41 UTC
*** Bug 113544 has been marked as a duplicate of this bug. ***