tdf#113408 RTF import style dedup: separate paragraph and character handling

The problem was that the paragraph in question had no left margin, while
it should have one. The reason for this is that the style deduplication
logic took both the current paragraph and character style, but the
direct formatting only contained character formatting, so it tried to
emit the default values for all paragraph formatting.

This started to show up after commit
657c6cc3acec0528209a8584b838cd6de581c437 (tdf#104228 RTF import: fix
override of style left/right para margin, 2016-12-13), but the root
cause is much older, it was there since commit
321d7ec2071472b3765a00806715e7ad9f8a306f (fdo#82078 RTF import: fix bold
text spilling over to non-bold text, 2014-09-06).

Change-Id: If03240a85cc9de89afe9111c2d29de2672e407bf